# multicamera_broadcaster

./: .bazelrc  CMakeLists.txt  README.md  WORKSPACE  clang-format  notes.md
Application/: CMakeLists.txt
Application/include/Application/: application_utils.h
Application/src/: application.cpp
Communications/: CMakeLists.txt
ImageProcessor/: BUILD  CMakeLists.txt
ImageProcessor/cmake/: ImageProcessorConfig.cmake.in  image_processorConfig.cmake.in
ImageProcessor/include/: image_processor_manager.h
ImageProcessor/include/ImageProcessor/: haar_eye_detector_process.h  haar_face_recognition_process.h  image_processor_interface.h  image_processor_manager.h
ImageProcessor/include/Image_Processor/: haar_eye_detector_process.h  haar_face_recognition_process.h  image_processor_interface.h  image_processor_manager.h
ImageProcessor/src/: haar_eye_detector_process.h  haar_face_recognition_process.h  main.cpp
ImageProcessor/test/: CMakeLists.txt  face_recognition_tests.cpp  main.cpp
ThirdLibs/: README.md
VideoController/: CMakeLists.txt
VideoController/include/VideoController/: video_controller.h
VideoController/src/: video_controller_app.cpp
cmake/: Findraspicam.cmake  GMockConfig.cmake
scripts/: Dockerfile  execute_clang-format-on-project.sh  launch_raspi_cam.sh  notes.txt  system_install_deps.sh
utilities/: CMakeLists.txt
utilities/include/utilities/: utilities.h
